--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -35,7 +35,6 @@ ul { list-style-type: none; padding: 0; }
 ul li { margin: 3px 0; font-size: 0.9em; }
 
 /* Стилі для контейнерів, які повинні бути вирівняні по лівому краю */
-#log,
 .collected-boxes,
 #game-info {
     text-align: left; /* Встановлюємо вирівнювання по лівому краю для цих блоків */
@@ -88,6 +87,19 @@ button:disabled { background-color: #cccccc; cursor: not-allowed; }
     justify-content: space-around;
     gap: 1em;
     margin-top: 1em;
+}
+#log {
+    max-height: 150px; /* Обмежує максимальну висоту контейнера */
+    overflow-y: scroll; /* Дозволяє вертикальну прокрутку, якщо вмісту забагато */
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin-top: 10px;
+    text-align: left;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    font-size: 0.9em;
+    line-height: 1.4;
+    white-space: pre-wrap; /* Забезпечує перенесення рядків */
 }
     </style>
 </head>
