--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -138,7 +138,7 @@ body {
     p { margin: 5px 0; }
     ul { list-style-type: none; padding: 0; }
     ul li { margin: 3px 0; font-size: 0.9em; }
-    #game-info { text-align: left; margin-top: 20px; }
+    #game-info { text-align: center; margin-top: 20px; }
     #suits-checkboxes { 
         margin-bottom: 2em;
         display: flex;
