--- a/index_webapp_final.html
+++ b/index_webapp_final.html
@@ -385,7 +385,7 @@ body {
             logMessage(`🏆 Гра завершена! Переможець: ${data.winner}.`);
     
             // Відображення повідомлення
-            window.alert("🏆 " + data.message);
+            //window.alert("🏆 " + data.message);
 
             // Формування результатів
             const resultsHtml = data.results.map(p => {
